// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  data-testid="decisionHistory-container"
>
  <Title />
  <Main>
    <DecisionList>
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "1",
          }
        }
        onClosePopover={[Function]}
      />
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "2",
          }
        }
        onClosePopover={[Function]}
      />
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "3",
          }
        }
        onClosePopover={[Function]}
      />
    </DecisionList>
  </Main>
</div>
`;

exports[`renders disable load more 1`] = `
<div
  data-testid="decisionHistory-container"
>
  <Title />
  <Main>
    <DecisionList>
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "1",
          }
        }
        onClosePopover={[Function]}
      />
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "2",
          }
        }
        onClosePopover={[Function]}
      />
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "3",
          }
        }
        onClosePopover={[Function]}
      />
    </DecisionList>
    <ShowMoreButton
      disabled={true}
      onClick={[Function]}
    />
  </Main>
</div>
`;

exports[`renders empty state 1`] = `
<div
  data-testid="decisionHistory-container"
>
  <Title />
  <Main>
    <DecisionList>
      <Empty />
    </DecisionList>
  </Main>
</div>
`;

exports[`renders hasMore 1`] = `
<div
  data-testid="decisionHistory-container"
>
  <Title />
  <Main>
    <DecisionList>
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "1",
          }
        }
        onClosePopover={[Function]}
      />
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "2",
          }
        }
        onClosePopover={[Function]}
      />
      <DecisionHistoryItemContainer
        action={
          Object {
            "id": "3",
          }
        }
        onClosePopover={[Function]}
      />
    </DecisionList>
    <ShowMoreButton
      disabled={false}
      onClick={[Function]}
    />
  </Main>
</div>
`;
